Got `readXSFcrystal()` working for the XSF files we use

--- a/Project.toml
+++ b/Project.toml
@@ -5,3 +5,6 @@ version = "0.1.0"
 
 [deps]
 Crystalline = "ae5e2be0-a263-11e9-351e-f94dad1eb351"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
